--- a/back-end.desafio/pom.xml
+++ b/back-end.desafio/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>dozer-core</artifactId>
 			<version>${dozer.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.25</version>
+		</dependency>
 	</dependencies>
 
 	<build>
