--- a/back-end.desafio/src/main/resources/application.properties
+++ b/back-end.desafio/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=back-end desafio
+#Application Geral properties
+server.port=8080
+
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+# DataSource properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/desafio-fatto-db
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=update
