Cors and presentation_order create and delete logic

--- a/back-end.desafio/src/main/resources/application.properties
+++ b/back-end.desafio/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/desafio-fatto-db
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
+
+cors:
+  originPatterns: http://localhost:8080,http://localhosto:3000
