--- a/back-end.desafio/src/main/resources/application.properties
+++ b/back-end.desafio/src/main/resources/application.properties
@@ -17,5 +17,4 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
 
-cors:
-  originPatterns: http://localhost:8080,http://localhosto:3000
+cors.originPatterns= http://localhost:8080,http://localhost:4200
