--- a/back-end.desafio/src/main/resources/application.properties
+++ b/back-end.desafio/src/main/resources/application.properties
@@ -12,9 +12,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 
 # DataSource properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/desafio-fatto-db
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 cors.originPatterns= http://localhost:8080,http://localhost:4200
