--- a/back-end.desafio/DockerFile
+++ b/back-end.desafio/DockerFile
@@ -1,16 +1,16 @@
-FROM ubuntu:latest AS build
+FROM ubuntu:latest as build
 
 RUN apt-get update
 RUN apt-get install openjdk-21-jdk -y
 COPY . .
 
 RUN apt-get install maven -y
-RUN mvn clean install
+RUN mvn clean install -DskipTests
 
 FROM openjdk:21-jdk-slim
 
 EXPOSE 8080
 
-COPY --from=build /target/back-end.desafio-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /target/back-end.desafio-0.0.1-SNAPSHOT.jar /app.jar
 
-ENTRYPOINT [ "java", "-jar", "app.jar" ]
+ENTRYPOINT ["java", "-jar", "app.jar"]
